2005-11-29 Niklas Knutsson  <nq@altern.org>

	* Parse -x/y as (-x)/y instead of -(x/y)
	* Print multiplication in negation with parentheses when excessive parentheses is on

2005-11-28 Niklas Knutsson  <nq@altern.org>

	* Updated function arguments parsing ignoring space after function name and not stopping parsing of
	  single argument without parentheses until space or right parenthesis without corresponding left parenthesis
	* Be more strict with 0/x if x is not non-zero
	* Fix 1E-1 = 1e-1
	* Calculate as float when 1.0001 > base < 0.9999 and exponent is greater than 10000 or less than -10000

2005-11-27 Niklas Knutsson  <nq@altern.org>

	* Unknown variable with sign non-negative or non-positive represents real number
	* Update assumption type after setting sign and vice versa
	* Assume again when dividing that units do not convert to zero
	* "Einstein per Meter per Second" => "Einstein per Meter Squared per Second"

2005-11-26 Niklas Knutsson  <nq@altern.org>

	* Be more restrictive with unknown variables/symbols with unknown type (might be unit or vector)

2005-11-25 Niklas Knutsson  <nq@altern.org>

	* Update qalc with new factorization and some more
	* Option for qalc to read commands from a file first
	* Fix unit comparisons
	* Fix handling of units with function in relation saved in approximate variable

2005-11-24 Niklas Knutsson  <nq@altern.org>

	* Sort out some power transformations

2005-11-23 Niklas Knutsson  <nq@altern.org>

	* More fixes (I'm not very good at keeping track of them)

2005-11-22 Niklas Knutsson  <nq@altern.org>

	* Preserve factorization print option (for (3/4*(x+1))/(y+1))

2005-11-21 Niklas Knutsson  <nq@altern.org>

	* Lots of evaluation and factorization fixes
	* Pass parent to some functions so the reference can be replaced for the whole child
	* New MathStructure sorting algorithm using the fact that the structure usually already is well sorted,
	  reducing the time to factorize (x+y)^50 to a third
